--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fabalous/test-karma",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "postversion": "git push && git push --tags && npm publish"
   },
@@ -20,8 +20,7 @@
     "jasmine-reporters": "^2.2.0",
     "jasmine-webpack-plugin": "^0.1.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/Faba-network/fabalous-runtime-web.git"
