--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   "license": "ISC",
   "dependencies": {
     "@fabalous/core": "*",
+    "jasmine": "^2.4.1",
+    "jasmine-reporters": "^2.2.0",
+    "jasmine-webpack-plugin": "^0.1.1",
     "karma": "^1.1.2",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "*",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
-    "phantomjs-prebuilt": "^2.1.7",
     "node-noop": "^1.0.0",
-    "jasmine": "^2.4.1",
-    "jasmine-reporters": "^2.2.0",
-    "jasmine-webpack-plugin": "^0.1.1"
+    "phantomjs-prebuilt": "^2.1.7"
   },
   "devDependencies": {},
   "repository": {
